@@ -1,3 +1,12 @@
+2006-03-28  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/ReflectionReader.cs
+	  Mono.Cecil/MarshalDesc.cs
+	  Mono.Cecil/IMarshalSpec.cs
+	  Mono.Cecil/ReflectionWriter.cs:
+		Fix round-tripping of assemblies using
+		COM stuff.
+
 2006-03-27  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil.Metadata/MetadataToken.cs:
